{
  "version": 4,
  "terraform_version": "1.8.3",
  "serial": 70,
  "lineage": "41ed2f20-930e-dcf2-2f1f-8cd790497a9f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "app_web_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e4a605aae6f3a44e",
            "association_id": "eipassoc-0a2787cb52b2d3baa",
            "domain": "vpc",
            "id": "eipalloc-0e4a605aae6f3a44e",
            "instance": "i-09769632fd9c98fd9",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0a73783027c9291ed",
            "private_dns": "ip-10-0-1-9.ec2.internal",
            "private_ip": "10.0.1.9",
            "public_dns": "ec2-54-211-47-161.compute-1.amazonaws.com",
            "public_ip": "54.211.47.161",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "app_web_eip_0"
            },
            "tags_all": {
              "Name": "app_web_eip_0"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_instance.app_web",
            "aws_security_group.app_web_sg",
            "aws_subnet.app_public_subnet",
            "aws_vpc.app_vpc",
            "data.aws_ami.ubuntu",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0769a3de5440550fc",
            "association_id": "eipassoc-028ddec9d97ae2d6b",
            "domain": "vpc",
            "id": "eipalloc-0769a3de5440550fc",
            "instance": "i-0d6f5b62ec0c68aef",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0837773b2aa88752d",
            "private_dns": "ip-10-0-2-81.ec2.internal",
            "private_ip": "10.0.2.81",
            "public_dns": "ec2-44-195-163-38.compute-1.amazonaws.com",
            "public_ip": "44.195.163.38",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "app_web_eip_1"
            },
            "tags_all": {
              "Name": "app_web_eip_1"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_instance.app_web",
            "aws_security_group.app_web_sg",
            "aws_subnet.app_public_subnet",
            "aws_vpc.app_vpc",
            "data.aws_ami.ubuntu",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "app_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03e9149278a6f457c",
            "arn": "arn:aws:ec2:us-east-1:725303716321:instance/i-09769632fd9c98fd9",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09769632fd9c98fd9",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "Terraform3",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0a73783027c9291ed",
            "private_dns": "ip-10-0-1-9.ec2.internal",
            "private_ip": "10.0.1.9",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-07a139c0e8cc82d48",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0adbc18a425d73bfc",
            "tags": {
              "Name": "app_web_0"
            },
            "tags_all": {
              "Name": "app_web_0"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0dc0642c0985592d4"
            ]
          },
          "dependencies": [
            "aws_security_group.app_web_sg",
            "aws_subnet.app_public_subnet",
            "aws_vpc.app_vpc",
            "data.aws_ami.ubuntu",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03e9149278a6f457c",
            "arn": "arn:aws:ec2:us-east-1:725303716321:instance/i-0d6f5b62ec0c68aef",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d6f5b62ec0c68aef",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "Terraform3",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0837773b2aa88752d",
            "private_dns": "ip-10-0-2-81.ec2.internal",
            "private_ip": "10.0.2.81",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-020018fafb6e18563",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a69ca8c0ac1a35ee",
            "tags": {
              "Name": "app_web_1"
            },
            "tags_all": {
              "Name": "app_web_1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0dc0642c0985592d4"
            ]
          },
          "dependencies": [
            "aws_security_group.app_web_sg",
            "aws_subnet.app_public_subnet",
            "aws_vpc.app_vpc",
            "data.aws_ami.ubuntu",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "app_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:725303716321:internet-gateway/igw-0b7335987256f5b98",
            "id": "igw-0b7335987256f5b98",
            "owner_id": "725303716321",
            "tags": {
              "Name": "app_igw"
            },
            "tags_all": {
              "Name": "app_igw"
            },
            "vpc_id": "vpc-07f5c33b24518eb9a"
          },
          "dependencies": [
            "aws_vpc.app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "external-alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:725303716321:loadbalancer/app/External-LB/2b297ce4d7ff6784",
            "arn_suffix": "app/External-LB/2b297ce4d7ff6784",
            "desync_mitigation_mode": "defensive",
            "dns_name": "External-LB-1440259176.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:725303716321:loadbalancer/app/External-LB/2b297ce4d7ff6784",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "External-LB",
            "security_groups": [
              "sg-0dc0642c0985592d4"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0a69ca8c0ac1a35ee"
              },
              {
                "subnet_id": "subnet-0adbc18a425d73bfc"
              }
            ],
            "subnets": [
              "subnet-0a69ca8c0ac1a35ee",
              "subnet-0adbc18a425d73bfc"
            ],
            "vpc_id": "vpc-07f5c33b24518eb9a",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.app_web_sg",
            "aws_subnet.app_public_subnet",
            "aws_vpc.app_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "listener_elb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:725303716321:listener/app/External-LB/2b297ce4d7ff6784/e403bddd6865f3e8",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:725303716321:targetgroup/ALB-TG/1808d6eaa0e45d82",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:725303716321:listener/app/External-LB/2b297ce4d7ff6784/e403bddd6865f3e8",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:725303716321:loadbalancer/app/External-LB/2b297ce4d7ff6784",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.external-alb",
            "aws_lb_target_group.target_elb",
            "aws_security_group.app_web_sg",
            "aws_subnet.app_public_subnet",
            "aws_vpc.app_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "target_elb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:725303716321:targetgroup/ALB-TG/1808d6eaa0e45d82",
            "arn_suffix": "targetgroup/ALB-TG/1808d6eaa0e45d82",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/index.html",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:725303716321:targetgroup/ALB-TG/1808d6eaa0e45d82",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "ALB-TG",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-07f5c33b24518eb9a"
          },
          "dependencies": [
            "aws_vpc.app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "lbtg1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:725303716321:targetgroup/ALB-TG/1808d6eaa0e45d82-20240522191310064300000002",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:725303716321:targetgroup/ALB-TG/1808d6eaa0e45d82",
            "target_id": "i-09769632fd9c98fd9"
          },
          "dependencies": [
            "aws_instance.app_web",
            "aws_lb_target_group.target_elb",
            "aws_security_group.app_web_sg",
            "aws_subnet.app_public_subnet",
            "aws_vpc.app_vpc",
            "data.aws_ami.ubuntu",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "lbtg2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:725303716321:targetgroup/ALB-TG/1808d6eaa0e45d82-20240522191310982100000003",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:725303716321:targetgroup/ALB-TG/1808d6eaa0e45d82",
            "target_id": "i-0d6f5b62ec0c68aef"
          },
          "dependencies": [
            "aws_instance.app_web",
            "aws_lb_target_group.target_elb",
            "aws_security_group.app_web_sg",
            "aws_subnet.app_public_subnet",
            "aws_vpc.app_vpc",
            "data.aws_ami.ubuntu",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "app_private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:725303716321:route-table/rtb-063fd36aeb9607e36",
            "id": "rtb-063fd36aeb9607e36",
            "owner_id": "725303716321",
            "propagating_vgws": [],
            "route": [],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-07f5c33b24518eb9a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "app_public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:725303716321:route-table/rtb-0ae509fa78169e813",
            "id": "rtb-0ae509fa78169e813",
            "owner_id": "725303716321",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b7335987256f5b98",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-07f5c33b24518eb9a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.app_igw",
            "aws_vpc.app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05a7d2da66acabb80",
            "route_table_id": "rtb-063fd36aeb9607e36",
            "subnet_id": "subnet-0e1a9b0644c6ce34c"
          },
          "dependencies": [
            "aws_route_table.app_private_rt",
            "aws_subnet.app_private_subnet",
            "aws_vpc.app_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08b67fc40f990f3c3",
            "route_table_id": "rtb-063fd36aeb9607e36",
            "subnet_id": "subnet-052482c997bf730ea"
          },
          "dependencies": [
            "aws_route_table.app_private_rt",
            "aws_subnet.app_private_subnet",
            "aws_vpc.app_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0feb4237e0ba1e0e1",
            "route_table_id": "rtb-0ae509fa78169e813",
            "subnet_id": "subnet-0adbc18a425d73bfc"
          },
          "dependencies": [
            "aws_internet_gateway.app_igw",
            "aws_route_table.app_public_rt",
            "aws_subnet.app_public_subnet",
            "aws_vpc.app_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03dc00e9ad49a98b1",
            "route_table_id": "rtb-0ae509fa78169e813",
            "subnet_id": "subnet-0a69ca8c0ac1a35ee"
          },
          "dependencies": [
            "aws_internet_gateway.app_igw",
            "aws_route_table.app_public_rt",
            "aws_subnet.app_public_subnet",
            "aws_vpc.app_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app_db_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:725303716321:security-group/sg-097b81340748f043b",
            "description": "Security group for app databases",
            "egress": [],
            "id": "sg-097b81340748f043b",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow MySQL traffic from only the web sg",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0dc0642c0985592d4"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "app_db_sg",
            "name_prefix": "",
            "owner_id": "725303716321",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "app_db_sg"
            },
            "tags_all": {
              "Name": "app_db_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-07f5c33b24518eb9a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.app_web_sg",
            "aws_vpc.app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app_web_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:725303716321:security-group/sg-0dc0642c0985592d4",
            "description": "Security group for app web servers",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0dc0642c0985592d4",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SSH from my computer",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all traffic through HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "app_web_sg",
            "name_prefix": "",
            "owner_id": "725303716321",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "app_web_sg"
            },
            "tags_all": {
              "Name": "app_web_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-07f5c33b24518eb9a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "app_private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:725303716321:subnet/subnet-0e1a9b0644c6ce34c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e1a9b0644c6ce34c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "725303716321",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "app_private_subnet_0"
            },
            "tags_all": {
              "Name": "app_private_subnet_0"
            },
            "vpc_id": "vpc-07f5c33b24518eb9a"
          },
          "dependencies": [
            "aws_vpc.app_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:725303716321:subnet/subnet-052482c997bf730ea",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-052482c997bf730ea",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "725303716321",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "app_private_subnet_1"
            },
            "tags_all": {
              "Name": "app_private_subnet_1"
            },
            "vpc_id": "vpc-07f5c33b24518eb9a"
          },
          "dependencies": [
            "aws_vpc.app_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "app_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:725303716321:subnet/subnet-0adbc18a425d73bfc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0adbc18a425d73bfc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "725303716321",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "app_public_subnet_0"
            },
            "tags_all": {
              "Name": "app_public_subnet_0"
            },
            "vpc_id": "vpc-07f5c33b24518eb9a"
          },
          "dependencies": [
            "aws_vpc.app_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:725303716321:subnet/subnet-0a69ca8c0ac1a35ee",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a69ca8c0ac1a35ee",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "725303716321",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "app_public_subnet_1"
            },
            "tags_all": {
              "Name": "app_public_subnet_1"
            },
            "vpc_id": "vpc-07f5c33b24518eb9a"
          },
          "dependencies": [
            "aws_vpc.app_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "app_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:725303716321:vpc/vpc-07f5c33b24518eb9a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-036789c9087711e29",
            "default_route_table_id": "rtb-0fffdecab671e8ae1",
            "default_security_group_id": "sg-0816a979ce63798f7",
            "dhcp_options_id": "dopt-0b040da3a995d9b98",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-07f5c33b24518eb9a",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0fffdecab671e8ae1",
            "owner_id": "725303716321",
            "tags": {
              "Name": "app_vpc"
            },
            "tags_all": {
              "Name": "app_vpc"
            }
          }
        }
      ]
    }
  ]
}